src/App/components/Section/components/LocationBlock/LocationBlock.module.scss
@import '../../../../styles/index.scss';

.active {
  background-color: $redColor;
  color: $whiteColor;
}

.container {
  margin: $space-s;

  @include screenMax600 {
    margin-bottom: 0;
  }
}

.laneModeContainer {
  margin: $space-s;

  @include screenMax600 {
    margin-bottom: 0;
    width: 150px;
  }
}

.zeromargin {
  margin: 0;
}

%body {
  width: 1fr;
  min-height: 100px;
  padding: $space-s $space-xxs $space-s $space-s;
  position: relative;
  border: 2px solid transparent;
  transition: 0.2s;
  display: flex;

  clip-path: inset(-100vw -100vw -100vw 0);

  &:focus-within {
    outline: none;

    & .deleteButton {
      @extend .active;
    }
  }

  .deleteButton {
    position: absolute;
    right: -10px;
    top: -10px;
    background-color: $lightGrayColor;
    color: $darkGrayColor;

    &:hover {
      @extend .active;
    }

    .icon {
      font-size: $fs16;
    }
  }

  .opaccityBlock {
    display: none;
    opacity: 0;
    transition: 0.2s;
  }

  &:hover {
    @extend .onboarding;
  }

  .infoBlock {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;

    .buttonContainer {
      display: flex;
      flex-direction: column;

      &:hover {
        @extend .onboarding;
      }
    }

    .leftSide {
      display: flex;
      transition: 0.2s;
      flex-grow: 1;
      width: 60%;

      .flagContainer img {
        padding-right: $space-xxs;
        width: $space-l;
      }

      .infoContainer {
        display: flex;
        flex-direction: column;
        justify-content: center;
      }

      .bottomInfo {
        color: $grayColor;
        text-align: start;
      }
    }

    .topInfo {
      font-family: roboto-medium;
      font-size: $fs18;
      margin-bottom: $space-xxs;
      display: -webkit-box;
      -webkit-line-clamp: 2;
      -webkit-box-orient: vertical;
      overflow: hidden;
    }
  }

  .laneModeInfoBlock {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;

    @include screenMax600 {
      display: flex;
      flex-direction: column;
      padding-top: $space-xs;
      padding-bottom: $space-xs;
    }

    .buttonContainer {
      display: flex;
      flex-direction: column;

      @include screenMax600 {
        flex-direction: row;
      }

      &:hover {
        @extend .onboarding;
      }
    }

    .buttonContainerHide {
      opacity: -1;
    }

    .leftSide {
      display: flex;
      width: 60%;

      @include screenMax600 {
        display: block;
        width: 100%;
        text-align: center;
      }

      .flagContainer img {
        padding-right: $space-xxs;
        width: $space-l;
      }

      .infoContainer {
        display: flex;
        flex-direction: column;
        justify-content: center;
      }

      .bottomInfo {
        color: $grayColor;
        text-align: start;

        @include screenMax600 {
          display: none;
        }
      }
    }

    .topInfo {
      font-family: roboto-medium;
      font-size: $fs18;
      margin-bottom: $space-xxs;
      display: -webkit-box;
      -webkit-line-clamp: 2;
      -webkit-box-orient: vertical;
      overflow: hidden;

      @include screenMax600 {
        font-size: $fs14;
      }
    }
  }

  .commentBlock {
    margin-top: $space-xs;
    margin-left: $space-xxs;

    .commentText {
      font-family: roboto-bold;
      margin-right: $space-xxs;
    }
  }
}

.hide {
  opacity: 0;
}

.lightBody {
  @include lightBlock;
  @extend %body;

  color: $darkColor;

  &:focus-within {
    border: 2px solid $darkGrayColor;
  }
}

.darkBody {
  @include darkBlock;
  @extend %body;

  color: $lightColor;

  &:focus-within {
    border: 2px solid $lightGrayColor;
  }
}

.shaking {
  position: relative;
  animation-duration: 0.7s;
  animation-name: shaking;
  animation-iteration-count: infinite;
}

@keyframes shaking {
  0% {
    transform: rotate(-0.5deg);
  }
  25% {
    transform: rotate(0.5deg);
  }
  50% {
    transform: rotate(-0.5deg);
  }
  75% {
    transform: rotate(0.5deg);
  }
  100% {
    transform: rotate(-0.5deg);
  }
}

.onboarding {
  .opaccityBlock {
    opacity: 1;
  }

  .moveLeftOrRight {
    left: 0px;
  }
}

.planningMode {
  animation-duration: 2s;
  animation-name: planningMode;
  animation-iteration-count: infinite;
}

@keyframes planningMode {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 0.2;
  }
  100% {
    opacity: 1;
  }
}

.marginRight {
  @include screenMax600 {
    margin-right: 70px;
  }
}

.wrapper {
  width: 100%;
}

.timeTable {
  display: flex;
  margin-left: $space-m;
  width: 1100px;
  overflow-x: scroll;

  &::-webkit-scrollbar {
    display: none;
  }

  .time {
    height: 100%;
    display: flex;
    align-items: center;
    padding: $space-s $space-m;
  }
}

%laneModeBody {
  padding: 0;
  min-height: auto;
  border-radius: 0;
  box-shadow: none;
}

.laneModeBodyLight {
  @extend %laneModeBody;

  border-top: 1px solid $whiteColor;
  border-bottom: 1px solid $whiteColor;
  border-left: 0.5px solid $lightGrayColor;
  border-right: 0.5px solid $lightGrayColor;
}

.laneModeBodyDark {
  @extend %laneModeBody;

  border-top: 1px solid $darkGrayColor;
  border-bottom: 1px solid $darkGrayColor;
  border-left: 0.5px solid $paleGrayColor;
  border-right: 0.5px solid $paleGrayColor;
}

.currentBody {
  border: 2px solid $blueColor;
}

